# Cli2Gui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DATA_STRUCTURES.md  LICENSE.md  README.md  cli2gui-demo.sh  comparison.md  get-PySimpleGUI.py.sh  make.py  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: c2gtypes.md  decorators.md  readme.md
DOCS/application/: application.md  index.md  pysimplegui2args.md  widgets.md
DOCS/cli2gui/: c2gtypes.md  decorators.md  index.md
DOCS/cli2gui/application/: application.md  index.md  pysimplegui2args.md  widgets.md
DOCS/cli2gui/tojson/: argparse2json.md  click2json.md  docopt2json.md  getopt2json.md  index.md  optparse2json.md
DOCS/tojson/: argparse2json.md  click2json.md  docopt2json.md  getopt2json.md  index.md  optparse2json.md
cli2gui/: __init__.py  application.py  argparse2json.py  c2gtypes.py  cli2gui-demo.py  decorators.py  getopt2json.py  optparse2json.py  types.py
cli2gui/application/: PySimpleGUI.py  __init__.py  application.py  application2args.py  pandoc2plain.py  pysimplegui2args.py  widgets.py
cli2gui/gui/: abstract_gui.py  dearpygui_wrapper.py  helpers.py  pysimplegui_wrapper.py
cli2gui/tojson/: argparse2json.py  click2json.py  docopt2json.py  getopt2json.py  optparse2json.py
documentation/reference/: README.md
documentation/reference/cli2gui/: c2gtypes.md  decorators.md  index.md  types.md
documentation/reference/cli2gui/application/: application.md  application2args.md  index.md  pysimplegui2args.md  widgets.md
documentation/reference/cli2gui/gui/: abstract_gui.md  dearpygui_wrapper.md  helpers.md  index.md  pysimplegui_wrapper.md
documentation/reference/cli2gui/tojson/: argparse2json.md  click2json.md  docopt2json.md  getopt2json.md  index.md  optparse2json.md
documentation/tutorials/: README.md
test/argparse/: advanced.py  simple.py  test_advanced.py  test_simple.py
test/click/: simple.py  test_simple.py
test/custom(argparse)/: advanced.py  simple.py  test_advanced.py  test_simple.py
test/dephell_argparse/: advanced.py  simple.py  test_advanced.py  test_simple.py
test/docopt/: simple.py  test_simple.py
test/getopt/: advanced.py  simple.py  test_advanced.py  test_simple.py
test/optparse/: advanced.py  simple.py  test_advanced.py  test_simple.py
tests/argparse/: another_file.md  file.md  test_10.py  test_11.py  test_18.py  test_22.py  test_24.py  test_advanced.py  test_advanced_fsg.py  test_advanced_psg.py  test_simple.py
tests/click/: test_boolean.py  test_choice.py  test_feat_switches.py  test_simple.py
tests/custom(argparse)/: test_advanced.py  test_simple.py
tests/dephell_argparse/: test_advanced.py  test_simple.py
tests/docopt/: test_11.py  test_advanced.py  test_simple.py
tests/getopt/: test_simple.py
tests/optparse/: test_11.py  test_simple.py
