[tool.poetry]
name = "cli2gui"
version = "2024"
license = "mit"
description = "Use this module to convert a cli program to a gui"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Web Environment",
	"Environment :: Win32 (MS Windows)",
	"Environment :: X11 Applications :: Qt",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/Cli2Gui"
repository = "https://github.com/FHPythonUtils/Cli2Gui"
documentation = "https://github.com/FHPythonUtils/Cli2Gui/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "<11,>=10.2.0"
PySimpleGUI = "<6,>=5.0.2"
PyYAML = "<7,>=6.0.1"
catpandoc = {version = "<2026,>=2024", optional = true}
PySimpleGUIWeb = {version = "<2,>=0.39.0", optional = true}
PySimpleGUIQt = {version = "<6,>=5.0.0", optional = true}
getostheme = "<2026,>=2024.0.1"

[tool.poetry.extras]
web = ["PySimpleGUIWeb"]
qt = ["PySimpleGUIQt"]
pandoc = ["catpandoc"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
handsdown = "^2.1.0"
coverage = "^7.4.3"
ruff = "^0.2.2"
pyright = "^1.1.351"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # type annotation for self in method
    "COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
    "N802", "N803", "N806", "N812", "N813",  # pep8 naming
    "PLR09",  # pylint refactor too many
	"T201",
    "TCH",  # type check blocks
    "W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"


[tool.pyright]
venvPath = "."
venv = ".venv"
