[project]
name = "cli2gui"
version = "2025"
description = "Use this module to convert a cli program to a gui"
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.9"
readme = "README.md"
license = "mit"
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Web Environment",
	"Environment :: Win32 (MS Windows)",
	"Environment :: X11 Applications :: Qt",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",
]
dependencies = [
    "dearpygui>=2.0.0",
    "getostheme>=2024.0.1",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
psg = ["pysimplegui<6,>=5.0.3"]
fsg = ["freesimplegui<6,>=5.1.1"]
web = ["PySimpleGUIWeb<2,>=0.39.0"]
qt = ["PySimpleGUIQt<6,>=5.0.0"]
pandoc = ["catpandoc<2026,>=2024"]

[project.urls]
Homepage = "https://github.com/FHPythonUtils/Cli2Gui"
Repository = "https://github.com/FHPythonUtils/Cli2Gui"
Documentation = "https://github.com/FHPythonUtils/Cli2Gui/blob/master/README.md"

[dependency-groups]
dev = [
    "click>=8.1.8",
    "coverage>=7.6.12",
    "dephell-argparse>=0.1.3",
    "docopt>=0.6.2",
    "handsdown>=2.1.0",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "safety>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
	"ISC001",
	"N802", "N803", "N806", "N812", "N813", "N815",  # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",  # type check blocks
	"W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402", "T201"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
venvPath = "."
venv = ".venv"
